<resources>
    <string name="app_name">ExamsHelper</string>
    <string name="date_format">dd/MM/yyyy</string>

    <!--Toolbar menu constants-->
    <string name="toolbar_settings">Ustawienia</string>
    <string name="toolbar_statistics">Statystyki</string>
    <string name="toolbar_delete_all">Usun wszystko</string>
    <string name="toolbar_refresh_subjects">Odswiez przedmioty</string>
    <string name="toolbar_edit_subjects">Edytuj przedmioty</string>
    <string name="toolbar_change_theme">Zmień motyw</string>

    <!--drawer-->
    <string name="drawer_open">opening drawer</string>
    <string name="drawer_close">closing drawer</string>

    <!--Tabs -->
    <string-array name="tab_titles">
        <item>Nadchodzące</item>
        <item>Napisane</item>
    </string-array>


    <!--Add new Exam-->
    <string name="add_new_exam_toolbar_text">Dodaj egzamin</string>
    <string name="hint_add_exam_subject">Przedmiot</string>
    <string name="hint_add_exam_extras">Zaliczenie</string>
    <string name="hint_add_exam_date">Data</string>
    <string name="hint_add_exam_time">Godzina</string>
    <string name="button_text_add_exam">Dodaj</string>

    <string name="empty_subject_add_exam">Musisz podac przedmiot</string>
    <string name="empty_date_add_exam">Musisz podac date</string>

    <string name="add_exam_dialog_title">Wybierz przedmiot</string>

    <!--Subjects list-->
    <string name="subject_list_toolbar_text">Wybierz przedmiot</string>
    <string name="subject_list_delete_text">Usuń</string>

    <string-array name="default_subjects">
        <item>Matematyka</item>
        <item>Fizyka</item>
        <item>Chemia</item>
        <item>Polski</item>
        <item>Angielski</item>
        <item>Niemiecki</item>
        <item>Geografia</item>
        <item>Biologia</item>
        <item>Informatyka</item>
        <item>Religia</item>
        <item>WF</item>
    </string-array>

    <!--Add new subject-->
    <string name="add_subject_toolbar_text">Dodaj przedmiot</string>
    <string name="hint_subject_title">Przedmiot</string>
    <string name="hint_subject_color">Kolor</string>
    <string name="warning_add_subject_empty">Musisz podac przedmiot</string>
    <string name="warning_add_subject_badchar">Przedmiot musi zaczynac sie od litery</string>
    <string name="warning_add_subject_subject_already_exists">Podany przedmiot już istnieje</string>
    <string name="button_text_change_subject">Zmień</string>

    <string name="button_text_save">Zapisz</string>
    <string name="button_text_back">Cofnij</string>


    <!--Single subject exams-->
    <string name="sse_toolbar">Egzaminy</string>
    <string name="sse_default_exam_info">Brak opisu</string>
    <string name="sse_info_average">Średnia: %1$s</string>
    <string name="sse_info_median">Mediana: %1$s</string>
    <string name="sse_info_dominant">Dominanta: %1$s</string>
    <string name="sse_info_lack_dominant">brak</string>
    <string name="sse_info_passed">Zaliczone: %1$s</string>
    <string name="sse_info_failed">Niezaliczone: %1$s</string>
    <string name="sse_info_percent">Wynik: %1$s</string>

    <!--ungraded exams-->
    <string name="ungraded_toolbar_text">Nieocenione</string>

    <!--list items-->
    <string name="list_item_old_exam_no_grades">Nieocenione</string>

    <!--transitions -->
    <string name="transition_list_item_to_toolbar">listItemToToolbar</string>

    <!--tags-->
    <string name="tag_dialog_select_grade">selectGrade</string>
    <string name="tag_dialog_select_subject">selectSubject</string>
    <string name="tag_dialog_edit_subject">editSubject</string>
    <string name="tag_dialog_add_new_subject">addNewSubject</string>
    <string name="tag_dialog_edit">confirm</string>
    <string name="tag_dialog_confirm">confirm</string>
    <string name="tag_dialog_radio">radio</string>


    <!--dialogs-->
    <string name="dialog_select_grade_title">Wybierz ocenę</string>
    <string name="dialog_select_grade_posbut">Wybierz</string>
    <string name="dialog_save_posbut">Zapisz</string>
    <string name="dialog_negbut">Cofnij</string>
    <string name="dialog_enter_text_title">Podaj zaliczenie</string>
    <string name="dialog_confirm_pref_title">Zmiana ocen</string>
    <string name="dialog_confirm_pref_content">Pamiętaj! Zmiany tym polu spowodują usunięcie wszystkich napisanych egzaminów. Kontynuwać?</string>


    <!--preferences-->
    <string name="title_activity_settings">Ustawienia</string>
    <string name="pref_desing_group">Wygląd</string>
    <string name="pref_night_mode">Używaj trybu nocnego</string>
    <string name="pref_user_group">Użytkownik</string>
    <string name="pref_user_name">Nazwa użytkownika</string>
    <string name="pref_user_name_sub">Pod tą nazwą będą Cię widzieć inni</string>

    <string name="pref_grades_group">Oceny</string>
    <string name="pref_grades">Rodzaj ocen</string>
    <string name="pref_grades_sub">Określ czy wyświetlane oceny są z zakresu studiów, czy nauczania podstawowego</string>
    <string name="pref_grades_decimal">Cząstkowe oceny jako całość</string>
    <string name="pref_grades_decimal_sub">Oceny cząstkowe (np. 3+) będą liczone w statystykach jako całe.
        W przeciwnym wypadku ± 0.25</string>

    <!--preference keys-->
    <string name="key_night_mode">pref_night_mode</string>
    <string name="key_grades_type">pref_grades_type</string>
    <string name="key_grades_decimal">pref_grades_decimal</string>

    <string name="key_user_name">pref_user_name</string>
    <string name="key_user_auth_token">pref_user_auth_token</string>
    <string name="key_user_is_logged">pref_user_is_logged</string>
    <string name="key_user_id">pref_user_id</string>


    <!--preference grade type-->
    <string-array name="pref_grades_entries">
        <item>Oceny szkolne</item>
        <item>Oceny studenckie</item>
    </string-array>

    <string-array name="pref_grades_entryValues">
        <item>0</item>
        <item>1</item>
    </string-array>


    <string name="button_confirm_yes">Tak</string>
    <string name="button_confirm_no">Nie</string>
    <string name="toolbar_main_title">Egzaminy</string>
    <string name="key_fabric_subjects">pref_fabric_subjects</string>
    <string name="pref_fabric_subjects_sub">Usuwa wszelkie zmiany w przedmiotach i przywraca domyślne wartości</string>
    <string name="pref_fabric_subjects">Przywróć domyślne przedmioty</string>
    <string name="key_fabric_exams">key_fabric_exams</string>
    <string name="pref_fabric_exams_sub">Czyści informacje zarówno o nadchodzących, jak i o napisanych egzaminach</string>
    <string name="pref_fabric_exams">Usuń wszystkie egzaminy</string>
    <string name="pref_fabric_group">Ustawienia fabryczne</string>
    <string name="key_fabric_group">qqq</string>
    <string name="menu_item_about">O aplikacji</string>
    <string name="menu_item_exams">Egzaminy</string>


    <!--login activity-->
    <string name="toast_empty_creditionals">Musisz podac dane</string>
    <string name="toast_server_error">Nie mozna polaczyc sie z serverem</string>
    <string name="toast_successful_login">Logowanie przebiegło pomyślnie</string>
    <string name="toast_unexpected_error">Wystąpił niespodziewany błąd</string>
    <string name="toast_cannot_find_user_error">Podany login nie istnieje</string>
    <string name="toast_password_error">Podane hasło jest nieprawidłowe</string>


    <!--INTERNET-->
    <!--telefon-->
    <!--<string name="net_host" translatable="false">http://192.168.43.112:8080</string>-->
    <!--dom-->
    <!--<string name="net_host" translatable="false">http://192.168.0.103:8080</string>-->
    <!--wroclove-->
    <string name="net_host" translatable="false">http://192.168.0.104:8080</string>

    <string name="net_auth_header" translatable="false">X-AUTH-TOKEN</string>

</resources>
