<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/menu_group_profile" android:checkableBehavior="single">

    <item android:id="@+id/menu_item_statistics"
        android:title="@string/toolbar_statistics"
        android:icon="@drawable/statistics_icon" />

        <item android:id="@+id/menu_item_exams"
            android:title="Egzaminy"
            android:icon="@drawable/exams_icon"
            android:checked="true"/>

    </group>


    <group android:id="@+id/menu_group_edit" android:checkableBehavior="single">

        <item android:id="@+id/menu_item_deleteAll"
            android:title="@string/toolbar_delete_all"
            android:icon="@drawable/bin_icon"
            />

        <item android:id="@+id/menu_item_refresh_subjects"
            android:title="@string/toolbar_refresh_subjects"
            android:icon="@drawable/refresh_icon"/>

        <item android:id="@+id/menu_item_edit_subjects"
            android:title="@string/toolbar_edit_subjects"
            android:icon="@drawable/info_icon"/>

    </group>


    <group android:id="@+id/menu_group_settings" android:checkableBehavior="single">

        <item android:id="@+id/menu_item_settings"
            android:title="@string/toolbar_settings"
            android:icon="@drawable/settings_icon" />

        <item android:id="@+id/menu_item_change_theme"
            android:title="@string/toolbar_change_theme"
            android:icon="@drawable/change_theme_icon"/>

    </group>

</menu>