<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grudus.nativeexamshelper.activities.AddNewSubjectActivity"
    android:id="@+id/add_subject_layout"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" />

    <LinearLayout
        style="@style/UserInputLayoutStyle">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                style="@style/ImageIconAddExamTheme"
                android:src="@drawable/info_icon"
/>

            <EditText
                style="@style/UserInputEditTextStyle"
                android:id="@+id/add_subject_title"
                android:maxLines="1"
                android:maxLength="@integer/add_xxx_max_chars"
                android:hint="@string/hint_subject_title" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                style="@style/ImageIconAddExamTheme"
                android:src="@drawable/color_icon"
                android:id="@+id/add_subject_color_icon"/>

            <EditText
                style="@style/UserInputEditTextStyle"
                android:hint="@string/hint_subject_color"
                android:id="@+id/add_subject_color"
                android:focusable="false" />
        </LinearLayout>

        <Button
            style="@style/AddButtonStyle"
            android:id="@+id/add_subject_button"
            android:text="@string/button_text_add_exam"/>

    </LinearLayout>

</LinearLayout>
